UIFR-222: Adding Java 17 Compatability